--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <nav class="a-navigation">
             <ul>
                 <label>
-                    <input type="radio" name="nav">
+                    <input type="radio" name="nav" checked>
                     <li><a key="repair">Ремонт техники</a></li>
                 </label>
                 <label>
