--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <title>1.4: Продвинутая стилизация</title>
 </head>
 <body>
-    <aside>
-        <header class="top-menu">
+    <main>
+        <div class="top-menu">
             <button><img src="img/burger.svg" alt="Закрыть меню"></button>
             <img src="img/logo.svg" alt="Логотип">
             <button><img src="img/search.svg" alt="Поиск"></button>
-        </header>
+        </div>
 
         <nav class="a-navigation">
             <ul>
@@ -52,7 +52,7 @@
             </ul>
         </nav>
 
-        <footer class="a-footer">
+        <div class="a-footer">
             <div class="feedback">
                 <button><img src="img/call.svg" alt="Закрыть меню"></button>
                 <button><img src="img/chat.svg" alt="Логотип"></button>
@@ -66,11 +66,11 @@
             </p>
 
             <div class="e-lang">
-                <button id="ru">RU</button>
-                <button id="en">EN</button>
-                <button id="ch">CH</button>
+                    <button id="ru">RU</button>
+                    <button id="en">EN</button>
+                    <button id="ch">CH</button> 
             </div>
-        </footer>
-    </aside>
+        </div>
+    </main>
 </body>
 </html>
