--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <main>
+    <aside>
         <div class="top-menu">
             <button><img src="img/burger.svg" alt="Закрыть меню"></button>
             <img src="img/logo.svg" alt="Логотип">
@@ -71,6 +72,7 @@
                     <button id="ch">CH</button> 
             </div>
         </div>
+    </aside>
     </main>
 </body>
 </html>
